Remove unused and deprecated code